--- a/travel-agency.html
+++ b/travel-agency.html
@@ -41,7 +41,7 @@
             </div>
             <button class="header-button">Explore homes</button>
         </div>
-        <img src="/ExamFEB/03.Travel_Resources/images/landing-photo.jpg" alt="landing-photo" class="landing-photo">
+        <img src="landing-photo.jpg" alt="landing-photo" class="landing-photo">
     </header>
     <main class="main">
         <header class="main-top">
@@ -50,42 +50,42 @@
         </header>
         <div class="destinations">
             <div class="container">
-                <img src="/ExamFEB/03.Travel_Resources/images/London.jpg" alt="London" class="container-image">
+                <img src="London.jpg" alt="London" class="container-image">
                 <h3>London</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
                 </p>
                 <button class="main-btn">Discover Place</button>
             </div>
             <div class="container">
-                <img src="/ExamFEB/03.Travel_Resources/images/Rome.jpg" alt="Rome" class="container-image">
+                <img src="Rome.jpg" alt="Rome" class="container-image">
                 <h3>Rome</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
                 </p>
                 <button class="main-btn">Discover Place</button>
             </div>
             <div class="container">
-                <img src="/ExamFEB/03.Travel_Resources/images/Cluj-Napoca.jpg" alt="Cluj-Napoca" class="container-image">
+                <img src="Cluj-Napoca.jpg" alt="Cluj-Napoca" class="container-image">
                 <h3>Cluj-Napoca</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
                 </p>
                 <button class="main-btn">Discover Place</button>
             </div>
             <div class="container">
-                <img src="/ExamFEB/03.Travel_Resources/images/Paris.jpg" alt="Paris" class="container-image">
+                <img src="Paris.jpg" alt="Paris" class="container-image">
                 <h3>Paris</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
                 </p>
                 <button class="main-btn">Discover Place</button>
             </div>
             <div class="container">
-                <img src="/ExamFEB/03.Travel_Resources/images/Amsterdam.jpg" alt="Amsterdam" class="container-image">
+                <img src="Amsterdam.jpg" alt="Amsterdam" class="container-image">
                 <h3>Amsterdam</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
                 </p>
                 <button class="main-btn">Discover Place</button>
             </div>
             <div class="container">
-                <img src="/ExamFEB/03.Travel_Resources/images/Barcelona.jpg" alt="Barcelona" class="container-image">
+                <img src="Barcelona.jpg" alt="Barcelona" class="container-image">
                 <h3>Barcelona</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
                 </p>
